feat: 전략 리빌딩(추가/삭제) 	•	S1 (신규/개편): Donchian(돈치안) 돌파 일봉 스윙 — 최근 N일 최고가 돌파 시 진입, ATR 기반 손절/트레일로 추세를 길게 추종합니다. 	•	S2 (개편): 추세 내 눌림목(일봉) 스윙 — 추세 필터(SMA60/200) + 조정(RSI/저점반등) 조건으로 재진입 기회를 늘립니다. 	•	S3 (개편): 변동성 수축→확장(일봉) 돌파 — 급등 전 수축 구간을 필터링해 “급등 시동”만 노립니다. 	•	S4 (개편): 일봉 앙상블(스코어/가중치) — S1~S3 점수화 후 최종 진입/청산 결정(성과 기반 가중치 업데이트)로 유지합니다. 	•	S5 (신규): 장초반 단타(오프닝 레인지/갭&고) — 일봉 스윙과 실행 스케줄/리스크/백테스트 UI를 완전히 분리해 별도 모드로 운영합니다. 지놈앤컴퍼니 자동 매매 전략 추가합니다.