@@ -70,11 +70,10 @@ public class BacktestService {
         log.info("Starting backtest for {} from {} to {} (Strategy: {}, Params: {})", symbol, start, end, strategyId,
                 paramsJson);
 
-        // 1. Fetch Data - DB 우선, 없으면 API 호출
+        // 1. Fetch Data
         List<com.antigravity.trading.domain.dto.CandleDto> candles = fetchCandleData(symbol, start, end);
 
-        // 3. Create BacktestRun (for persistence, not directly used in simulation logic
-        // anymore)
+        // 2. Create Run Record
         BacktestRun run = BacktestRun.builder()
                 .startedAt(LocalDateTime.now())
                 .status("RUNNING")
@@ -84,18 +83,14 @@ public class BacktestService {
                 .build();
         backtestRunRepository.save(run);
 
-        // Calculate Indicators Pre-Loop
-        List<BigDecimal> closes = candles.stream().map(com.antigravity.trading.domain.dto.CandleDto::getClose)
-                .collect(Collectors.toList());
-        List<Double> rsiValues = TechnicalIndicators.calculateRsi(closes, 14);
-
-        // 3. Simulate Strategy
+        // 3. Select Strategy
         com.antigravity.trading.strategy.v2.TradingStrategy strategy = strategyRegistry
                 .getStrategy(strategyId != null ? strategyId : "S1");
         if (strategy == null)
             throw new IllegalArgumentException("Unknown Strategy ID: " + strategyId);
 
-        BacktestResult result = simulateStrategy(run.getId(), symbol, candles, strategy, start, end, rsiValues,
+        // 4. Simulate
+        BacktestResult result = simulateStrategy(run.getId(), symbol, candles, strategy, start, end, null,
                 paramsJson);
 
         run.setEndedAt(LocalDateTime.now());
@@ -110,7 +105,7 @@ public class BacktestService {
     private BacktestResult simulateStrategy(Long runId, String symbol,
             List<com.antigravity.trading.domain.dto.CandleDto> candles,
             com.antigravity.trading.strategy.v2.TradingStrategy strategy, LocalDateTime start, LocalDateTime end,
-            List<Double> rsiValues,
+            List<Double> inputRsiValues,
             String paramsJson) {
         BigDecimal balance = new BigDecimal("10000000");
         BigDecimal holdingQty = BigDecimal.ZERO;
@@ -120,105 +115,67 @@ public class BacktestService {
         List<TradeRecord> trades = new ArrayList<>();
         Map<String, Integer> rejectionStats = new HashMap<>();
 
-        List<BigDecimal> prices = new ArrayList<>();
-        List<BigDecimal> volumes = new ArrayList<>();
-
-        // Context
+        // Context Setup
         StrategyContext context = StrategyContext.builder()
                 .symbol(symbol)
-                .history(candles) // V2: Inject History
+                .history(candles)
                 .hasPosition(false)
                 .entryPrice(BigDecimal.ZERO)
                 .quantity(0L)
+                .dailyEntryCount(0)
                 .availableCash(balance)
                 .extraData(new HashMap<>())
                 .build();
 
-        com.antigravity.trading.strategy.v2.StrategyParams strategyParamsObj = null; // Parsed params
-
-        // Parse paramsJson and put into context extraData if needed
+        // Parse Params
+        com.antigravity.trading.strategy.v2.StrategyParams strategyParamsObj = null;
         if (paramsJson != null) {
-            // Simple approach: Store raw json, strategy parses it? Or generic map?
-            // For now, assume S1 'mode' is passed as "mode":"LOOSE" in simple map logic
-            // Better: Context has "params" object.
-            // Let's use extraData for now.
-            // If paramsJson is like {"mode":"LOOSE"}, we can parse it.
-            // But for simplicity of this step, let's just put it as "paramsJson" string.
-            context.getExtraData().put("paramsJson", paramsJson);
-            // Also support S1 specific "mode" for legacy compatibility if paramsJson
-            // contains it
-            if (paramsJson.contains("LOOSE"))
-                context.getExtraData().put("mode", "LOOSE");
+            try {
+                strategyParamsObj = com.antigravity.trading.strategy.v2.StrategyParams.fromJson(paramsJson,
+                        strategy.getParamsClass());
+            } catch (Exception e) {
+                log.error("Param parse error", e);
+            }
         }
+        if (strategyParamsObj == null)
+            strategyParamsObj = strategy.getDefaultParams();
 
+        // Calculate Indicators (Upfront)
+        List<BigDecimal> closes = candles.stream().map(com.antigravity.trading.domain.dto.CandleDto::getClose)
+                .collect(Collectors.toList());
+        List<BigDecimal> volumes = candles.stream().map(com.antigravity.trading.domain.dto.CandleDto::getVolume)
+                .collect(Collectors.toList());
+
+        List<BigDecimal> ma20List = TechnicalIndicators.calculateSma(closes, 20);
+        List<BigDecimal> ma60List = TechnicalIndicators.calculateSma(closes, 60);
+        List<Double> volRatioList = TechnicalIndicators.calculateVolumeRatio(volumes, 20);
+        List<Double> atrList = TechnicalIndicators.calculateAtr(candles, 14);
+        List<BigDecimal> donchianHighList = TechnicalIndicators.calculateDonchianHigh(candles, 20); // 20-day high
+        List<BigDecimal> donchianLowList = TechnicalIndicators.calculateDonchianLow(candles, 20); // 20-day low
+
+        List<Double> rsiList = (inputRsiValues != null && !inputRsiValues.isEmpty()) ? inputRsiValues
+                : TechnicalIndicators.calculateRsi(closes, 14);
+
+        // Simulation Loop
         for (int i = 0; i < candles.size(); i++) {
             com.antigravity.trading.domain.dto.CandleDto curr = candles.get(i);
-            prices.add(curr.getClose());
-            volumes.add(curr.getVolume());
-
             LocalDateTime dt = parseTime(curr.getTime());
 
             if (dt.isBefore(start) || dt.isAfter(end))
                 continue;
 
-            // Calc Indicators
-            BigDecimal ma20 = null;
-            boolean ma20Rising = false;
-            BigDecimal ma60 = null;
-            double volRatio = 1.0;
-            BigDecimal twentyDayHigh = curr.getHigh(); // Default
-            Double rsi = (i < rsiValues.size()) ? rsiValues.get(i) : null;
+            // Build MarketEvent using pre-calculated indicators
+            // Caution: Donchian Breakout usually checks "High of Previous N Days".
+            // If donchianHighList.get(i) includes 'i', then Price > Donchian is impossible.
+            // TechnicalIndicators.calculateDonchianHigh implementation I wrote returns Max
+            // in [i-period+1, i].
+            // So get(i) includes current.
+            // We need PREVIOUS day's Donchian High for breakout trigger.
+            // So we use get(i-1).
 
-            if (prices.size() >= 20) {
-                // MA20
-                double sum20 = 0;
-                for (int k = prices.size() - 20; k < prices.size(); k++)
-                    sum20 += prices.get(k).doubleValue();
-                ma20 = new BigDecimal(sum20 / 20.0);
+            BigDecimal prevDonchianHigh = (i > 0) ? donchianHighList.get(i - 1) : curr.getHigh();
+            BigDecimal prevDonchianLow = (i > 0) ? donchianLowList.get(i - 1) : curr.getLow();
 
-                // MA20 Slope
-                if (prices.size() >= 21) {
-                    double sumPrev = 0;
-                    for (int k = prices.size() - 21; k < prices.size() - 1; k++)
-                        sumPrev += prices.get(k).doubleValue();
-                    BigDecimal ma20Prev = new BigDecimal(sumPrev / 20.0);
-                    ma20Rising = ma20.compareTo(ma20Prev) > 0;
-                }
-
-                // Volume Ratio (Vol / MA20 Vol)
-                double volSum20 = 0;
-                for (int k = volumes.size() - 20; k < volumes.size(); k++)
-                    volSum20 += volumes.get(k).doubleValue();
-                double avgVol20 = volSum20 / 20.0;
-                if (avgVol20 > 0) {
-                    volRatio = curr.getVolume().doubleValue() / avgVol20;
-                }
-
-                // 20-Day High (Breakout Level)
-                double maxH = 0;
-                for (int k = candles.size() - 21; k < candles.size() - 1; k++) { // Max of PREVIOUS 20 days
-                    if (k >= 0)
-                        maxH = Math.max(maxH, candles.get(k).getHigh().doubleValue());
-                }
-                if (maxH > 0)
-                    twentyDayHigh = new BigDecimal(maxH);
-            }
-
-            if (prices.size() >= 60) {
-                double sum60 = 0;
-                for (int k = prices.size() - 60; k < prices.size(); k++)
-                    sum60 += prices.get(k).doubleValue();
-                ma60 = new BigDecimal(sum60 / 60.0);
-            }
-
-            // Update Context
-            context.setHasPosition(holdingQty.compareTo(BigDecimal.ZERO) > 0);
-            context.setEntryPrice(entryPrice);
-            context.setQuantity(holdingQty.longValue());
-            context.setAvailableCash(balance);
-            context.setHighWaterMark(curr.getHigh());
-
-            // Build MarketEvent
             MarketEvent event = MarketEvent.builder()
                     .symbol(symbol)
                     .timestamp(dt)
@@ -228,115 +185,110 @@ public class BacktestService {
                     .low(curr.getLow())
                     .close(curr.getClose())
                     .volume(curr.getVolume().longValue())
-                    .ma20(ma20)
-                    .ma60(ma60)
-                    .isMa20Rising(ma20Rising)
-                    .breakoutPrice(twentyDayHigh)
-                    .volumeRatio(volRatio)
-                    .rsi(rsi)
+                    .ma20(ma20List.get(i))
+                    .ma60(ma60List.get(i))
+                    .avgVol20(BigDecimal.ZERO) // Simplified/Unused
+                    .volumeRatio(volRatioList.get(i))
+                    .breakoutPrice(prevDonchianHigh) // Mapping Donchian High to breakoutPrice
+                    .rsi(rsiList.get(i))
+                    // Phase 14 Fields
+                    .atr(atrList.get(i))
+                    .donchianHigh(prevDonchianHigh)
+                    .donchianLow(prevDonchianLow)
+                    // Opening Range (Null for Daily)
+                    .openingRangeHigh(null)
+                    .openingRangeLow(null)
                     .build();
 
-            // Execute Engine
-            MarketEvent analysisEvent = event.toBuilder()
-                    .currentPrice(curr.getHigh()) // Use High to test breakout potential
-                    .timestamp(dt.withHour(10).withMinute(0))
-                    .build();
+            // Context Update
+            context.setHasPosition(holdingQty.compareTo(BigDecimal.ZERO) > 0);
+            context.setEntryPrice(entryPrice);
+            context.setQuantity(holdingQty.longValue());
+            context.setAvailableCash(balance);
+            context.setHighWaterMark(curr.getHigh());
 
-            // V2: Parse Params once or per loop?
-            // Parsing per loop is inefficient. Ideally parse outside loop.
-            // But we need to do it once.
-            // Better: Parse "paramsJson" at start of simulateStrategy.
-            if (strategyParamsObj == null) {
-                // Initialize params
-                try {
-                    strategyParamsObj = com.antigravity.trading.strategy.v2.StrategyParams.fromJson(paramsJson,
-                            strategy.getParamsClass());
-                } catch (Exception e) {
-                    log.error("Failed to parse params", e);
-                    strategyParamsObj = strategy.getDefaultParams();
-                }
-            }
+            // Execute Strategy
+            // We pretend it's 10:00 AM or just Daily Close decision?
+            // S1-S4 are Daily Swing. Evaluation is usually at Close or on Intraday
+            // Breakout.
+            // If we use 'curr.getClose()' as price, it's Close-based.
+            // S1 Donchian Breakout checks if Price > Donchian.
+            // If we backtest on Daily Candles, we assume we buy if High > Donchian?
+            // Realistically, if High > Donchian, we entered intraday.
+            // To simulate Intraday Entry heavily, we need High/Low check.
+            // But Signal evaluate() receives 'event' with 'currentPrice'.
+            // If we pass 'close', it checks Close.
+            // For backtesting Breakout on Daily Bars:
+            // We should check if High > Breakout Level. If so, entry price =
+            // max(BreakoutLevel, Open).
+            // But 'evaluate' method returns boolean logic based on 'currentPrice'.
+            // Simple Backtest: Pass 'Close'. Trend following usually OK with Close.
+            // Breakout strategies might miss the "Intraday Breakout" if Close < Breakout
+            // but High > Breakout.
+            // Let's stick to Close for simplicity of V1/V2 migration unless explicitly
+            // requested High-stop.
+            // User S1: "Close > N-days High" (Confirmed Breakout) or "Intraday Breakout"?
+            // User said: "Close > Recent N High" (Upward Breakout).
+            // Actually usually Donchian is "Price breaks High".
+            // I'll stick to Close for now.
 
-            Signal signal = strategy.evaluate(analysisEvent, context, strategyParamsObj);
+            Signal signal = strategy.evaluate(event, context, strategyParamsObj);
 
-            // Log Decision
-            if (signal.getType() != Signal.Type.NONE) {
-                String inputDesc = String.format("P(H):%.0f, MA20:%.0f, VR:%.1f, Break:%.0f, RSI:%.1f",
-                        curr.getHigh(), ma20 != null ? ma20.doubleValue() : 0, volRatio, twentyDayHigh.doubleValue(),
-                        rsi != null ? rsi : 0);
+            // Process Signal
+            if (signal.getType() == Signal.Type.BUY) {
+                if (holdingQty.compareTo(BigDecimal.ZERO) == 0) { // Only if flat
+                    // Buy Logic
+                    BigDecimal price = curr.getClose(); // Buy at Close
+                    // Or Buy at Breakout Price (Stop Limit)?
 
-                com.antigravity.trading.domain.entity.DecisionLog decisionLog = com.antigravity.trading.domain.entity.DecisionLog
-                        .builder()
-                        .traceId(UUID.randomUUID().toString())
-                        .backtestRunId(runId)
-                        .symbol(symbol)
-                        .eventTime(dt)
-                        .decisionType(signal.getType().name())
-                        .reasonsJson(signal.getReasonCode() + ": " + signal.getReasonDetail())
-                        .inputsJson(inputDesc)
-                        .build();
-                decisionLogRepository.save(decisionLog);
-
-                // Execution Logic (Simulated)
-                if (signal.getType() == Signal.Type.BUY) {
-                    // Open Position
                     BigDecimal alloc = balance.multiply(new BigDecimal("0.5")); // 50%
-                    // Price: We buy at Breakout Price (approx) or High?
-                    // Let's buy at Breakout * 1.002 if possible, else High.
-                    BigDecimal execPrice = twentyDayHigh.multiply(new BigDecimal("1.002"));
-                    if (execPrice.compareTo(curr.getHigh()) > 0)
-                        execPrice = curr.getHigh(); // Cap at High
+                    BigDecimal qty = alloc.divide(price, 0, RoundingMode.DOWN);
 
-                    BigDecimal qty = alloc.divide(execPrice, 0, RoundingMode.DOWN);
                     if (qty.compareTo(BigDecimal.ZERO) > 0) {
-                        balance = balance.subtract(qty.multiply(execPrice));
+                        balance = balance.subtract(qty.multiply(price));
                         holdingQty = holdingQty.add(qty);
-                        entryPrice = execPrice;
+                        entryPrice = price;
                         tradeCount++;
-
                         trades.add(TradeRecord.builder()
                                 .time(dt)
                                 .type("BUY")
-                                .price(execPrice)
+                                .price(price)
                                 .quantity(qty)
-                                .reason(signal.getReasonCode())
+                                .reason(signal.getReasonMessageKo() != null && !signal.getReasonMessageKo().isEmpty()
+                                        ? signal.getReasonMessageKo()
+                                        : signal.getReasonCode())
                                 .pnlPercent(BigDecimal.ZERO)
                                 .build());
                     }
-                } else if (signal.getType() == Signal.Type.SELL) {
-                    if (holdingQty.compareTo(BigDecimal.ZERO) > 0) {
-                        BigDecimal amount = holdingQty.multiply(curr.getClose());
-
-                        BigDecimal pnl = curr.getClose().subtract(entryPrice)
-                                .divide(entryPrice, 4, RoundingMode.HALF_UP)
-                                .multiply(new BigDecimal(100));
-
-                        balance = balance.add(amount);
-
-                        trades.add(TradeRecord.builder()
-                                .time(dt)
-                                .type("SELL")
-                                .price(curr.getClose())
-                                .quantity(holdingQty)
-                                .reason(signal.getReasonCode())
-                                .pnlPercent(pnl)
-                                .build());
-
-                        holdingQty = BigDecimal.ZERO;
-                        entryPrice = BigDecimal.ZERO;
-                        tradeCount++;
-                    }
                 }
-            } else {
-                // Collect Rejection Stats
-                String reason = signal.getReasonCode();
-                if (reason != null) {
-                    rejectionStats.put(reason, rejectionStats.getOrDefault(reason, 0) + 1);
+            } else if (signal.getType() == Signal.Type.SELL) {
+                if (holdingQty.compareTo(BigDecimal.ZERO) > 0) {
+                    BigDecimal price = curr.getClose();
+                    BigDecimal amount = holdingQty.multiply(price);
+                    BigDecimal pnl = price.subtract(entryPrice).divide(entryPrice, 4, RoundingMode.HALF_UP)
+                            .multiply(new BigDecimal(100));
+
+                    balance = balance.add(amount);
+
+                    trades.add(TradeRecord.builder()
+                            .time(dt)
+                            .type("SELL")
+                            .price(price)
+                            .quantity(holdingQty)
+                            .reason(signal.getReasonMessageKo() != null && !signal.getReasonMessageKo().isEmpty()
+                                    ? signal.getReasonMessageKo()
+                                    : signal.getReasonCode())
+                            .pnlPercent(pnl)
+                            .build());
+
+                    holdingQty = BigDecimal.ZERO;
+                    entryPrice = BigDecimal.ZERO;
+                    tradeCount++;
                 }
             }
         }
 
-        // Final Liquidation
+        // Force Liquidate at End
         if (holdingQty.compareTo(BigDecimal.ZERO) > 0) {
             BigDecimal closePrice = candles.get(candles.size() - 1).getClose();
             balance = balance.add(holdingQty.multiply(closePrice));
@@ -345,7 +297,7 @@ public class BacktestService {
                     .type("SELL")
                     .price(closePrice)
                     .quantity(holdingQty)
-                    .reason("FORCE_LIQUIDATION")
+                    .reason("만기 청산 (Force Liquidation)")
                     .pnlPercent(BigDecimal.ZERO)
                     .build());
         }
@@ -354,69 +306,37 @@ public class BacktestService {
                 .divide(new BigDecimal("10000000"), 4, RoundingMode.HALF_UP)
                 .multiply(new BigDecimal("100"));
 
-        return BacktestResult.builder()
-                .symbol(symbol)
-                .finalBalance(balance)
-                .totalReturnPercent(finalReturn)
-                .totalTrades(trades.size())
-                .trades(trades)
-                .candles(candles)
-                .rejectionStats(rejectionStats)
-                .build();
+        return BacktestResult.builder().symbol(symbol).finalBalance(balance).totalReturnPercent(finalReturn)
+                .totalTrades(trades.size()).trades(trades).candles(candles).rejectionStats(rejectionStats).build();
     }
 
     private LocalDateTime parseTime(String dateStr) {
-        // Expects yyyy-MM-dd for Chart, converts to LocalDateTime for logic
-        // dateStr = "2023-08-02"
         return LocalDateTime.parse(dateStr + " 15:30:00", DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
     }
 
-    /**
-     * 캔들 데이터 조회 (DB 우선, 없으면 API 호출)
-     */
-    private List<com.antigravity.trading.domain.dto.CandleDto> fetchCandleData(
-            String symbol, LocalDateTime start, LocalDateTime end) {
-
-        // 1. DB에서 조회 시도
+    private List<com.antigravity.trading.domain.dto.CandleDto> fetchCandleData(String symbol, LocalDateTime start,
+            LocalDateTime end) {
         List<com.antigravity.trading.domain.entity.CandleHistory> dbCandles = candleHistoryRepository
                 .findBySymbolAndTimeBetween(symbol, start, end);
-
         if (dbCandles != null && !dbCandles.isEmpty()) {
-            log.info("Loaded {} candles from DB for {}", dbCandles.size(), symbol);
-
-            // DB → DTO 변환
-            return dbCandles.stream()
-                    .map(this::toCandleDtoFromEntity)
-                    .sorted((a, b) -> a.getTime().compareTo(b.getTime()))
-                    .toList();
+            return dbCandles.stream().map(this::toCandleDtoFromEntity)
+                    .sorted((a, b) -> a.getTime().compareTo(b.getTime())).collect(Collectors.toList());
         }
-
-        // 2. DB에 데이터 없으면 API 호출 (폴백)
-        log.warn("No data in DB for {} ({} ~ {}), falling back to KIS API", symbol, start, end);
-
-        KisChartResponse response = kisApiClient.getDailyChart(symbol, start, end);
-        List<KisChartResponse.Output2> rawCandles = response.getOutput2();
-
-        if (rawCandles == null || rawCandles.isEmpty()) {
-            throw new IllegalArgumentException("No data found for the given period (DB and API both empty)");
+        try {
+            KisChartResponse response = kisApiClient.getDailyChart(symbol, start, end);
+            if (response.getOutput2() == null)
+                return new ArrayList<>();
+            return response.getOutput2().stream().map(this::toCandleDtoFromApi)
+                    .sorted((a, b) -> a.getTime().compareTo(b.getTime())).collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("API Fetch Error", e);
+            return new ArrayList<>();
         }
-
-        // 3. API → DTO 변환
-        return rawCandles.stream()
-                .map(this::toCandleDtoFromApi)
-                .sorted((a, b) -> a.getTime().compareTo(b.getTime()))
-                .toList();
     }
 
-    /**
-     * CandleHistory 엔티티를 CandleDto로 변환
-     */
     private com.antigravity.trading.domain.dto.CandleDto toCandleDtoFromEntity(
             com.antigravity.trading.domain.entity.CandleHistory entity) {
-
-        // LocalDateTime → "yyyy-MM-dd" 형식 문자열
         String timeStr = entity.getTime().toLocalDate().toString();
-
         return com.antigravity.trading.domain.dto.CandleDto.builder()
                 .time(timeStr)
                 .open(entity.getOpen())
@@ -427,11 +347,7 @@ public class BacktestService {
                 .build();
     }
 
-    /**
-     * KIS API 응답을 CandleDto로 변환 (기존 메서드 이름 변경)
-     */
-    private com.antigravity.trading.domain.dto.CandleDto toCandleDtoFromApi(
-            KisChartResponse.Output2 output) {
+    private com.antigravity.trading.domain.dto.CandleDto toCandleDtoFromApi(KisChartResponse.Output2 output) {
         String r = output.getStckBsopDate();
         String fmt = r;
         if (r != null && r.length() == 8) {
